--- a/students/pom.xml
+++ b/students/pom.xml
@@ -56,7 +56,7 @@
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
 			<!--xd-->
-			<version>9.8.1</version>
+<!--			<version>9.8.1</version>-->
 		</dependency>
 		<!--<dependency>
 			<groupId>org.flywaydb</groupId>
